[package]
name = "doc-to-type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
convert_case = "0.6.0"
itertools = "0.10.5"
